--- a/src/main/resources/templates/pizza/index.html
+++ b/src/main/resources/templates/pizza/index.html
@@ -2,26 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="/fragments/resources :: head(pageTitle='Pizza List')">
 </head>
-<body>
+<body class="m-3">
 <main class="container">
-    <h1>Pizza List</h1>
+    <h1 class="text-center text-bg-light fw-semibold">Lista pizze</h1>
     <hr>
-    <table>
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Price</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="pizza : ${pizzaList}">
-            <td th:text="${pizza.name}"></td>
-            <td th:text="${pizza.description}"></td>
-            <td th:text="${pizza.price} + €"></td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table align-middle table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Descrizione</th>
+                <th>Prezzo</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="pizza : ${pizzaList}">
+                <td th:text="${pizza.name}"></td>
+                <td th:text="${pizza.description}"></td>
+                <td th:text="${pizza.price} + €"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </main>
 </body>
 </html>
