--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -6,10 +6,15 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- Bootstrap -->
+        <!-- css link -->
+        <link rel="stylesheet" th:href="@{/css/style.css}">
+        <!-- Bootstrap link -->
         <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}">
+        <!-- Font Awesome link -->
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.0/css/all.min.css}">
+        <!-- Bootstrap js -->
         <script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.css}" defer></script>
-
+        <!-- il title della pagina cambia e lo leggo dal parametro del fragment -->
         <title th:text="${pageTitle}"></title>
     </th:block>
 </head>
