--- a/src/main/resources/templates/pizza/index.html
+++ b/src/main/resources/templates/pizza/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/resources :: head(pageTitle='Pizza List')">
+<head th:insert="/fragments/resources :: head(pageTitle='Lista pizze')">
 </head>
 <body class="m-3">
 <main class="container">
@@ -14,6 +14,7 @@
                 <th>Nome</th>
                 <th>Descrizione</th>
                 <th>Prezzo</th>
+                <th>Azioni</th>
             </tr>
             </thead>
             <tbody>
@@ -21,6 +22,10 @@
                 <td th:text="${pizza.name}"></td>
                 <td th:text="${pizza.description}"></td>
                 <td th:text="${pizza.price} + €"></td>
+                <td>
+                    <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info ms-white-hover my-1"><i
+                            class="fa-solid fa-eye"></i></a>
+                </td>
             </tr>
             </tbody>
         </table>
