--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -13,7 +13,7 @@
         <!-- Font Awesome link -->
         <link rel="stylesheet" th:href="@{/webjars/font-awesome/6.4.0/css/all.min.css}">
         <!-- Bootstrap js -->
-        <script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.css}" defer></script>
+        <script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.js}" defer></script>
         <!-- il title della pagina cambia e lo leggo dal parametro del fragment -->
         <title th:text="${pageTitle}"></title>
     </th:block>
