--- a/src/main/resources/templates/pizza/index.html
+++ b/src/main/resources/templates/pizza/index.html
@@ -31,7 +31,11 @@
         </table>
     </div>
     <!-- messaggio informativo se la lista pizze è vuota -->
-    <h2 th:unless="${pizzaList.size() > 0}">La lista delle pizze è vuota!</h2>
+    <div th:unless="${pizzaList.size() > 0}" class="alert alert-info fs-3" role="alert">
+        La lista delle pizze è vuota!
+    </div>
+
+    <h2></h2>
 </main>
 </body>
 </html>
