--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/resources :: head(pageTitle='Lista pizze')">
+<head th:insert="~{/fragments/resources :: head(pageTitle='Error')}">
 
 <body>
 <div class="alert alert-secondary fs-3 text-center" role="alert">
