--- a/src/main/resources/templates/pizza/index.html
+++ b/src/main/resources/templates/pizza/index.html
@@ -1,26 +1,30 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:insert="/fragments/resources :: head(pageTitle='Lista pizze')">
+<head th:insert="~{/fragments/resources :: head(pageTitle='Lista pizze')}">
 </head>
-<body class="m-3">
+<body>
+<header>
+    <nav th:replace="~{/fragments/navbar :: navbar(current='pizzas')}"></nav>
+</header>
 <main class="container">
-    <h1 class="text-center text-bg-light fw-semibold">Lista pizze</h1>
-    <hr>
-    <!-- form di ricerca -->
-    <div>
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="fw-semibold text-danger mb-sm-0 mb-3 ">Elenco pizze</h1>
+        <!-- form di ricerca -->
         <form th:action="@{/pizzas}" method="GET">
-            <div class="input-group mb-3">
-                <input type="search" class="form-control" placeholder="Cerca per nome" name="q"
+            <div class="input-group">
+                <input type="search" class="form-control shadow-none border-danger" placeholder="Cerca per nome"
+                       name="q"
                        th:value="${searchInput}">
-                <button class="btn btn-outline-secondary" type="submit"><i class="fa-solid fa-magnifying-glass"></i>
+                <button class="btn btn-outline-danger" type="submit"><i
+                        class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </div>
         </form>
     </div>
     <!-- tabella lista pizze -->
-    <div th:if="${pizzaList.size() > 0}" class="table-responsive">
-        <table class="table align-middle table-striped table-hover">
-            <thead>
+    <div th:if="${pizzaList.size() > 0}" class="">
+        <table class="table table-striped table-responsive table-hover border-danger align-middle">
+            <thead class="border-bottom border-4 border-danger">
             <tr>
                 <th>Nome</th>
                 <th>Descrizione</th>
@@ -34,8 +38,9 @@
                 <td th:text="${pizza.description}"></td>
                 <td th:text="${pizza.price} + €"></td>
                 <td>
-                    <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info ms-white-hover my-1"><i
-                            class="fa-solid fa-eye"></i></a>
+                    <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info ms-white-hover my-1">
+                        <i class="fa-solid fa-eye"></i>
+                    </a>
                 </td>
             </tr>
             </tbody>
