--- a/src/main/resources/templates/pizza/show.html
+++ b/src/main/resources/templates/pizza/show.html
@@ -33,9 +33,12 @@
             </div>
         </div>
         <!-- tabella offerte pizza -->
-        <div th:if="${pizza.offers.size > 0}" class="col-6">
-            <h2 class="text-center text-danger fw-semibold">Offerte speciali</h2>
-            <table class="table table-striped table-responsive table-hover border-danger align-middle">
+        <div class="col-6">
+            <h2 class="text-center text-danger fw-semibold mb-3">Offerte speciali</h2>
+            <a th:href="@{/offers/create(pizzaId=${pizza.id})}" class="btn btn-primary fw-semibold mb-3"><i
+                    class="fa-solid fa-plus me-1"></i> Crea nuova offerta</a>
+            <table th:if="${pizza.offers.size > 0}"
+                   class="table table-striped table-responsive table-hover border-danger align-middle">
                 <thead class="border-bottom border-4 border-danger">
                 <tr>
                     <th>Titolo</th>
@@ -51,10 +54,10 @@
                 </tr>
                 </tbody>
             </table>
-        </div>
-        <!-- messaggio informativo se la pizza NON ha offerte associate -->
-        <div th:unless="${pizza.offers.size > 0}" class="alert alert-info col-6">
-            <h4>Non sono presenti offerte speciali</h4>
+            <!-- messaggio informativo se la pizza NON ha offerte associate -->
+            <div th:unless="${pizza.offers.size > 0}" class="alert alert-info">
+                <h4>Non sono presenti offerte speciali</h4>
+            </div>
         </div>
     </div>
 </main>
