Add delete method in OfferController - add button for offer delete in pizza show page

--- a/src/main/resources/templates/pizza/show.html
+++ b/src/main/resources/templates/pizza/show.html
@@ -56,6 +56,11 @@
                         <a th:href="@{|/offers/edit/*{id}|}" class="btn btn-outline-warning ms-white-hover my-1">
                             <i class="fa-solid fa-pen-to-square"></i>
                         </a>
+                        <form class="d-inline-block" th:action="@{|/offers/delete/*{id}|}"
+                              method="post">
+                            <button class="btn btn-outline-danger" type="submit"><i class="fa-solid fa-trash"></i>
+                            </button>
+                        </form>
                     </td>
                 </tr>
                 </tbody>
