--- a/src/main/resources/templates/pizza/show.html
+++ b/src/main/resources/templates/pizza/show.html
@@ -6,11 +6,17 @@
 <header>
     <nav th:replace="~{/fragments/navbar :: navbar(current='pizzas')}"></nav>
 </header>
-<main class="container">
+<main class="container-fluid">
+    <!-- messaggio alert quando avviene un'azione -->
+    <div th:if="${message != null}" class="alert alert-dismissible fade show" role="alert"
+         th:classAppend="${#strings.equalsIgnoreCase(message.type, 'SUCCESS')} ? 'alert-success' : 'alert-danger'">
+        <span th:text="${message.message}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <h1 class="text-center text-danger fw-semibold" th:text="${pizza.name}"></h1>
-    <div class="container d-flex align-items-center py-4">
+    <div class="container d-flex flex-column flex-lg-row align-items-center py-4">
         <!-- card dettagli pizza -->
-        <div class="card w-50 rounded-top me-5">
+        <div class="card col-lg-6 rounded-top mb-5 mb-lg-0">
             <div class="text-center p-3 bg-dark rounded-top">
                 <img th:src="${pizza.photoUrl}" class="img-thumbnail" th:alt="${pizza.name}">
             </div>
@@ -33,7 +39,7 @@
             </div>
         </div>
         <!-- tabella offerte pizza -->
-        <div class="col-6">
+        <div class="col-12 col-lg-6 ps-lg-5">
             <h2 class="text-center text-danger fw-semibold mb-3">Offerte speciali</h2>
             <a th:href="@{/offers/create(pizzaId=${pizza.id})}" class="btn btn-primary fw-semibold mb-3"><i
                     class="fa-solid fa-plus me-1"></i> Crea nuova offerta</a>
