--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
 <!-- fragment della navbar: current è il nome dell'area in cui sto navigando -->
 <nav class="navbar navbar-expand-lg bg-danger mb-3" th:fragment="navbar(current)">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold text-white" href="#">Il Regno della Pizza</a>
+        <a class="navbar-brand fw-bold text-white" th:href="@{/}">Il Regno della Pizza</a>
         <button class="navbar-toggler border-white" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,16 +16,12 @@
             <ul class="navbar-nav navbar-nav-right">
                 <!-- nei link appendo la classe active se l'area corrisponde a quella del link -->
                 <li class="nav-item">
-                    <a class="nav-link fw-semibold text-white" th:href="@{/}"><span
-                            th:classappend="${current == '' ? 'ms-active' : ''}">HOME</span></a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link fw-semibold text-white" th:href="@{/pizzas}"><span
                             th:classappend="${current == 'pizzas' ? 'ms-active' : ''}">PIZZE</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-semibold text-white" th:href="@{/}"><span
-                            th:classappend="${current == '' ? 'ms-active' : ''}">PIZZERIE</span></a>
+                    <a class="nav-link fw-semibold text-white" th:href="@{/ingredients}"><span
+                            th:classappend="${current == 'ingredients' ? 'ms-active' : ''}">INGREDIENTI</span></a>
                 </li>
             </ul>
         </div>
