Add print ingredients in pizza detail card on pizza show page - Add relationship attribute with ingredient entity in pizza model

--- a/src/main/resources/templates/pizza/index.html
+++ b/src/main/resources/templates/pizza/index.html
@@ -43,7 +43,7 @@
             <tbody>
             <tr th:each="pizza : ${pizzaList}">
                 <td th:text="${pizza.name}"></td>
-                <td th:text="${pizza.description}"></td>
+                <td th:text="${pizza.description}" class="col-6"></td>
                 <td th:text="${pizza.price} + €"></td>
                 <td>
                     <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info ms-white-hover my-1">
