--- a/src/main/resources/templates/pizza/edit.html
+++ b/src/main/resources/templates/pizza/edit.html
@@ -12,56 +12,74 @@
     <!-- utilizzo pipe per concatenare una stringa con parametro dinamico e non ripetere la parola pizza -->
     <!-- form di creazione/modifica pizza -->
     <form th:with="formAction=${isEdit ? '/pizzas/edit/'+ pizza.id : '/pizzas/create'}" th:action="@{${formAction}}"
-          th:object="${pizza}" method="post" id="pizza-form" class="row">
-        <div class="col-12 col-lg-6 mb-3">
-            <label class="form-label fw-semibold" for="name">Nome*</label>
-            <input class="form-control" type="text" id="name" th:field="*{name}" th:errorClass="is-invalid"
-                   placeholder="Inserisci il nome della pizza...">
-            <div class="form-text">Il campo nome non può essere vuoto e deve avere un numero di caratteri compreso tra
-                1 e 100
+          th:object="${pizza}" method="post" id="pizza-form" class="row justify-content-between">
+        <!-- campi pizza -->
+        <div class="col-7">
+            <div class="col-12 col-lg-6 mb-3">
+                <label class="form-label fw-semibold" for="name">Nome*</label>
+                <input class="form-control" type="text" id="name" th:field="*{name}" th:errorClass="is-invalid"
+                       placeholder="Inserisci il nome della pizza...">
+                <div class="form-text">Il campo nome non può essere vuoto e deve avere un numero di caratteri compreso
+                    tra
+                    1 e 100
+                </div>
+                <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
-            <div th:if="${#fields.hasErrors('name')}" class="invalid-feedback">
-                <ul>
-                    <li th:each="err : ${#fields.errors('name')}" th:text="${err}"></li>
-                </ul>
+            <div class="col-12 mb-3">
+                <label class="form-label fw-semibold" for="description">Descrizione*</label>
+                <textarea class="form-control" id="description" th:field="*{description}" th:errorClass="is-invalid"
+                          rows="5" placeholder="Inserisci la descrizione della pizza..."></textarea>
+                <div class="form-text">Il campo descrizione non può essere vuoto e deve avere un numero di caratteri
+                    compreso tra 1 e 500
+                </div>
+                <div th:if="${#fields.hasErrors('description')}" class="invalid-feedback">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('description')}" th:text="${err}"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-lg-8 mb-3">
+                <label class="form-label fw-semibold" for="photo-url">Url immagine*</label>
+                <input class="form-control" type="text" id="photo-url" th:field="*{photoUrl}" th:errorClass="is-invalid"
+                       placeholder="Esempio: https://lamiapizza.com/home">
+                <div class="form-text">Il campo URL non può essere vuoto, deve essere un indirizzo valido e deve avere
+                    massimo 500 caratteri
+                </div>
+                <div th:if="${#fields.hasErrors('photoUrl')}" class="invalid-feedback">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('photoUrl')}" th:text="${err}"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-3">
+                <label class="form-label fw-semibold" for="price">Prezzo*</label>
+                <input class="form-control" type="number" id="price" th:field="*{price}" th:errorClass="is-invalid"
+                       min="0"
+                       step=".01" placeholder="00.00">
+                <div class="form-text">Il campo prezzo non può essere nullo e deve essere un numero compreso tra 0 e
+                    99.99
+                </div>
+                <div th:if="${#fields.hasErrors('price')}" class="invalid-feedback">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="col-12 mb-3">
-            <label class="form-label fw-semibold" for="description">Descrizione*</label>
-            <textarea class="form-control" id="description" th:field="*{description}" th:errorClass="is-invalid"
-                      rows="5" placeholder="Inserisci la descrizione della pizza..."></textarea>
-            <div class="form-text">Il campo descrizione non può essere vuoto e deve avere un numero di caratteri
-                compreso tra 1 e 500
-            </div>
-            <div th:if="${#fields.hasErrors('description')}" class="invalid-feedback">
-                <ul>
-                    <li th:each="err : ${#fields.errors('description')}" th:text="${err}"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-12 col-lg-8 mb-3">
-            <label class="form-label fw-semibold" for="photo-url">Url immagine*</label>
-            <input class="form-control" type="text" id="photo-url" th:field="*{photoUrl}" th:errorClass="is-invalid"
-                   placeholder="Esempio: https://lamiapizza.com/home">
-            <div class="form-text">Il campo URL non può essere vuoto, deve essere un indirizzo valido e deve avere
-                massimo 500 caratteri
-            </div>
-            <div th:if="${#fields.hasErrors('photoUrl')}" class="invalid-feedback">
-                <ul>
-                    <li th:each="err : ${#fields.errors('photoUrl')}" th:text="${err}"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4 mb-3">
-            <label class="form-label fw-semibold" for="price">Prezzo*</label>
-            <input class="form-control" type="number" id="price" th:field="*{price}" th:errorClass="is-invalid" min="0"
-                   step=".01" placeholder="00.00">
-            <div class="form-text">Il campo prezzo non può essere nullo e deve essere un numero compreso tra 0 e 99.99
-            </div>
-            <div th:if="${#fields.hasErrors('price')}" class="invalid-feedback">
-                <ul>
-                    <li th:each="err : ${#fields.errors('price')}" th:text="${err}"></li>
-                </ul>
+        <!-- campi ingredienti -->
+        <div class="col-4">
+            <h4 class="fw-semibold text-danger mb-3">Ingredienti</h4>
+            <div class="form-check" th:each="ing : ${ingredientList}">
+                <!-- oggetto ingredientList per passare tutti gli ingredienti per popolare le checkbox -->
+                <input class="form-check-input" type="checkbox" th:value="${ing.id}" th:id="|ing_${ing.id}|"
+                       th:field="*{ingredients}">
+                <!-- per avere gli id univoci della input concateno la stringa con un parametro dinamico -->
+                <label class="form-check-label" th:for="|ing_${ing.id}|" th:text="${ing.name}">
+                </label>
             </div>
         </div>
         <div class="col-12 mt-3">
