--- a/src/main/resources/templates/ingredients/index.html
+++ b/src/main/resources/templates/ingredients/index.html
@@ -7,6 +7,12 @@
     <nav th:replace="~{/fragments/navbar :: navbar(current='ingredients')}"></nav>
 </header>
 <main class="container">
+    <!-- messaggio alert quando avviene un'azione -->
+    <div th:if="${message != null}" class="alert alert-dismissible fade show" role="alert"
+         th:classAppend="${#strings.equalsIgnoreCase(message.type, 'SUCCESS')} ? 'alert-success' : 'alert-danger'">
+        <span th:text="${message.message}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
     <h1 class="fw-semibold text-danger mb-4">Elenco ingredienti</h1>
     <div class="row justify-content-between">
         <!-- Elenco ingredienti -->
