--- a/src/main/resources/templates/ingredients/index.html
+++ b/src/main/resources/templates/ingredients/index.html
@@ -6,7 +6,7 @@
 <header>
     <nav th:replace="~{/fragments/navbar :: navbar(current='ingredients')}"></nav>
 </header>
-<main class="container">
+<main class="container mb-3">
     <!-- messaggio alert quando avviene un'azione -->
     <div th:if="${message != null}" class="alert alert-dismissible fade show" role="alert"
          th:classAppend="${#strings.equalsIgnoreCase(message.type, 'SUCCESS')} ? 'alert-success' : 'alert-danger'">
@@ -14,14 +14,16 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <h1 class="fw-semibold text-danger mb-4">Elenco ingredienti</h1>
-    <div class="row justify-content-between">
+    <div class="row flex-column flex-lg-row justify-content-between">
         <!-- Elenco ingredienti -->
-        <div class="col-7">
+        <div class="col-lg-7 mb-4">
             <ol class="list-group list-group-numbered" th:if="${ingredients.size > 0}">
                 <li class="list-group-item d-flex justify-content-between align-items-start"
                     th:each="ing : ${ingredients}" th:object="${ing}">
                     <div class="ms-2 me-auto">
-                        <h5 class="fw-bold" th:text="*{name}"></h5>
+                        <h5 class="fw-bold d-inline-block me-2" th:text="*{name}"></h5>
+                        <span class="badge bg-danger rounded-pill align-text-top"
+                              th:text="|*{pizzas.size()} *{pizzas.size() == 1 ? 'pizza' : 'pizze'}|"></span>
                         <p th:text="*{description}"></p>
                     </div>
                     <div class="mx-2 d-flex align-self-center">
@@ -36,7 +38,6 @@
                             </button>
                         </form>
                     </div>
-                    <span class="badge bg-danger rounded-pill">8</span>
                 </li>
             </ol>
             <!-- messaggio informativo se la pizza NON ha ingredienti -->
@@ -45,8 +46,8 @@
             </div>
         </div>
         <!-- Form creazione/modifica ingrediente -->
-        <div class="col-4">
-            <h2 class="fw-semibold text-danger mb-3">Aggiungi ingrediente</h2>
+        <div class="col-lg-4">
+            <h3 class="fw-semibold text-danger mb-3">Aggiungi ingrediente</h3>
             <form th:action="@{/ingredients/save}"
                   th:object="${ingredientObj}" method="post" id="ingredient-form" class="row">
                 <!-- passo l'id dell'ingredient al form come attributo nascosto per non creare un oggetto nuovo ad ogni modifica -->
