--- a/src/main/resources/templates/pizza/edit.html
+++ b/src/main/resources/templates/pizza/edit.html
@@ -6,16 +6,17 @@
 <header>
     <nav th:replace="~{/fragments/navbar :: navbar(current='pizzas')}"></nav>
 </header>
-<main class="container">
+<main class="container mb-3">
     <h1 class="fw-semibold text-danger mb-3" th:object="${pizza}"
         th:text="|${isEdit ? 'Modifica' : 'Nuova'} pizza|"></h1>
     <!-- utilizzo pipe per concatenare una stringa con parametro dinamico e non ripetere la parola pizza -->
     <!-- form di creazione/modifica pizza -->
     <form th:with="formAction=${isEdit ? '/pizzas/edit/'+ pizza.id : '/pizzas/create'}" th:action="@{${formAction}}"
-          th:object="${pizza}" method="post" id="pizza-form" class="row justify-content-between">
+          th:object="${pizza}" method="post" id="pizza-form"
+          class="row flex-column flex-sm-row justify-content-between">
         <!-- campi pizza -->
-        <div class="col-7">
-            <div class="col-12 col-lg-6 mb-3">
+        <div class="col-sm-7">
+            <div class="col-12 mb-3">
                 <label class="form-label fw-semibold" for="name">Nome*</label>
                 <input class="form-control" type="text" id="name" th:field="*{name}" th:errorClass="is-invalid"
                        placeholder="Inserisci il nome della pizza...">
@@ -42,7 +43,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-12 col-lg-8 mb-3">
+            <div class="col-12 mb-3">
                 <label class="form-label fw-semibold" for="photo-url">Url immagine*</label>
                 <input class="form-control" type="text" id="photo-url" th:field="*{photoUrl}" th:errorClass="is-invalid"
                        placeholder="Esempio: https://lamiapizza.com/home">
@@ -55,7 +56,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 mb-3">
+            <div class="col-12 col-md-6 col-xl-4 mb-3">
                 <label class="form-label fw-semibold" for="price">Prezzo*</label>
                 <input class="form-control" type="number" id="price" th:field="*{price}" th:errorClass="is-invalid"
                        min="0"
@@ -71,15 +72,17 @@
             </div>
         </div>
         <!-- campi ingredienti -->
-        <div class="col-4">
+        <div class="col-sm-4">
             <h4 class="fw-semibold text-danger mb-3">Ingredienti</h4>
-            <div class="form-check" th:each="ing : ${ingredientList}">
-                <!-- oggetto ingredientList per passare tutti gli ingredienti per popolare le checkbox -->
-                <input class="form-check-input" type="checkbox" th:value="${ing.id}" th:id="|ing_${ing.id}|"
-                       th:field="*{ingredients}">
-                <!-- per avere gli id univoci della input concateno la stringa con un parametro dinamico -->
-                <label class="form-check-label" th:for="|ing_${ing.id}|" th:text="${ing.name}">
-                </label>
+            <div class="d-flex flex-wrap flex-sm-column">
+                <div class="form-check me-4" th:each="ing : ${ingredientList}">
+                    <!-- oggetto ingredientList per passare tutti gli ingredienti per popolare le checkbox -->
+                    <input class="form-check-input" type="checkbox" th:value="${ing.id}" th:id="|ing_${ing.id}|"
+                           th:field="*{ingredients}">
+                    <!-- per avere gli id univoci della input concateno la stringa con un parametro dinamico -->
+                    <label class="form-check-label" th:for="|ing_${ing.id}|" th:text="${ing.name}">
+                    </label>
+                </div>
             </div>
         </div>
         <div class="col-12 mt-3">
